# AskDocs

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  start.sh
app/: main.py
app/backend/: main.py
app/backend/core/: settings.py
app/backend/routes/: __init__.py  chat.py  documents_index.py  health.py  health_check.py
app/backend/services/: chat_service.py  document_processor.py
app/core/: db.py  llm.py  qdrant.py  redis.py  settings.py
app/frontend/: app.py  main.py
app/frontend/components/: chat_interface.py  document_uploader.py  health_check.py
app/frontend/services/: api.py  api_service.py  chat.py  upload.py
app/middleware/: auth.py
app/model_handlers/: __init__.py  chat_message_handler.py  chat_session_handler.py  document_handler.py  folder_handler.py  user_handler.py
app/models/: __init__.py  chat_message.py  chat_session.py  chat_session_documents.py  document.py  folder.py  user.py
app/routes/: __init__.py  auth.py  chat.py  documents.py  folders.py  sessions.py  users.py
app/routes/auth/: users.py
app/services/: auth_service.py  chat_service.py  document_loader.py  document_processor.py
app/utils/: auth.py
backend/: .dockerignore  Makefile  pyproject.toml
backend/app/: main.py
backend/config/: settings.dev.yaml  settings.prod.yaml
backend/ops/: Dockerfile
config/: settings.dev.yaml  settings.prod.yaml
frontend/: .env  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
ops/: Dockerfile  docker-compose.yaml  init.sql
(+33 files in other folders)
