[project]
name = "askdocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "dynaconf>=3.2.11",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.1.4",
    "langchain-huggingface>=0.2.0",
    "langchain-unstructured>=0.1.6",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pypdf>=5.5.0",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "unstructured>=0.17.2",
    "uvicorn>=0.34.2",
]
